<?xml version="1.0" encoding="utf-8"?>
<com.yrek.incant.SubactivityView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/subactivity_view"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >
  <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
    <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:stretchColumns="2"
       >
      <TableRow>
	<TextView
	   android:layout_column="0"
	   android:layout_span="2"
	   android:text="@string/name"
	   />
	<EditText
	   android:layout_column="2"
	   android:layout_span="1"
	   android:id="@+id/edit_name"
	   android:hint="@string/name"
	   android:inputType="text"
	   android:scrollHorizontally="true"
	   android:singleLine="true"
	   />
      </TableRow>
      <TableRow>
	<TextView
	   android:layout_column="0"
	   android:layout_span="1"
	   android:text="@string/url"
	   />
	<TextView
	   android:layout_column="1"
	   android:layout_span="1"
	   android:id="@+id/ifarchive"
	   android:text="@string/ifarchive"
	   />
	<EditText
	   android:layout_column="2"
	   android:layout_span="1"
	   android:id="@+id/edit_url"
	   android:hint="@string/url"
	   android:inputType="textUri"
	   android:scrollHorizontally="true"
	   android:singleLine="true"
	   />
      </TableRow>
      <TableRow>
	<TextView
	   android:layout_column="0"
	   android:layout_span="2"
	   android:text="@string/zip_entry"
	   />
	<EditText
	   android:layout_column="2"
	   android:layout_span="1"
	   android:id="@+id/edit_zip_entry"
	   android:hint="@string/zip_entry"
	   android:inputType="text"
	   android:scrollHorizontally="true"
	   android:singleLine="true"
	   />
      </TableRow>
    </TableLayout>
    <ProgressBar
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:id="@+id/progressbar"
       android:indeterminate="true"
       />
  </RelativeLayout>
</com.yrek.incant.SubactivityView>
