<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:keepScreenOn="true"
   >
  <TextView  
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:id="@+id/onexone"
     android:typeface="monospace"
     android:text="X"
     android:alpha="0"
     />
  <TextView  
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:id="@+id/twoxtwo"
     android:typeface="monospace"
     android:text="XX\nXX"
     android:alpha="0"
     />
  <FrameLayout  
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent" 
     android:id="@+id/frame"
     android:background="@color/background"
     />
  <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/keyboard"
     android:alpha="0.4"
     android:visibility="gone"
     android:text="@string/keyboard"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_marginBottom="-18sp"
     android:layout_marginRight="10sp"
     />
  <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/skip"
     android:alpha="0.4"
     android:visibility="gone"
     android:text="@string/skip"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_marginBottom="-18sp"
     android:layout_marginRight="10sp"
     />
  <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/next"
     android:alpha="0.4"
     android:visibility="gone"
     android:text="@string/next"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_marginBottom="-18sp"
     android:layout_marginRight="10sp"
     />
  <EditText
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/edit"
     android:textColor="@color/input_text"
     android:background="@color/background"
     android:layout_alignParentBottom="true"
     android:visibility="gone"
     android:inputType="text"
     android:clickable="false"
     android:focusable="false"
     />
  <ProgressBar
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/progress_bar"
     android:indeterminate="true"
     android:layout_centerInParent="true"
     />
</RelativeLayout>
