<?xml version="1.0" encoding="utf-8"?>
<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >
  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
    <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >
      <ImageView
	 android:layout_width="150dp"
	 android:layout_height="150dp"
	 android:layout_alignParentTop="true"
	 android:layout_alignParentRight="true"
	 android:id="@+id/cover"
	 android:scaleType="centerInside"
	 />
      <LinearLayout
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:layout_alignParentTop="true"
	 android:layout_toLeftOf="@id/cover"
	 android:orientation="vertical"
	 >
	<TextView
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:id="@+id/name"
	   />
	<TextView
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:id="@+id/author"
	   />
	<TextView
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:id="@+id/headline"
	   />
	<Button
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:text="@string/play"
	   android:id="@+id/play"
	   />
      </LinearLayout>
    </RelativeLayout>
    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
      <ProgressBar
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:id="@+id/progressbar"
	 android:indeterminate="true"
	 />
      <Button
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/download"
	 android:id="@+id/downloaddelete"
	 />
      <TextView
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:id="@+id/downloaddeletetext"
	 />
    </LinearLayout>
    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:id="@+id/savecontainer"
       >
      <Button
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/delete_save"
	 android:id="@+id/deletesave"
	 />
      <TextView
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:id="@+id/savetext"
	 />
    </LinearLayout>
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/description"
       />
  </LinearLayout>
</ScrollView>
